--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,8 +9,10 @@ body {
 #appContainer {
   width: 100%;
   height: 100vh;
+  display: -ms-grid;
   display: grid;
-  grid-template-rows: 0.5fr 5fr 0.5fr;
+  -ms-grid-rows: 0.5fr 5fr 0.5fr;
+      grid-template-rows: 0.5fr 5fr 0.5fr;
   /* background-color: purple; */
   margin: 0;
   padding: 0;
@@ -32,10 +34,12 @@ body {
 }
 
 #topBarGrid {
+  display: -ms-grid;
   display: grid;
   width: 93%;
   margin: auto;
-  grid-template-columns: 15% 40% 27% 9% 9%;
+  -ms-grid-columns: 15% 40% 27% 9% 9%;
+      grid-template-columns: 15% 40% 27% 9% 9%;
 }
 
 #userIcon,
@@ -48,9 +52,15 @@ body {
 .subForumIcon,
 .formItemImageContainer,
 .itemMessage {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   /* vertically centering elements */
 }
 
@@ -85,12 +95,14 @@ body {
 
 #filterButton {
   /* background-color: blue; */
-  grid-column-start: 4;
+  -ms-grid-column: 4;
+      grid-column-start: 4;
 }
 
 #postButton {
   /* background-color: yellow; */
-  grid-column-start: 5;
+  -ms-grid-column: 5;
+      grid-column-start: 5;
 }
 
 #filterButton i,
@@ -107,13 +119,16 @@ body {
 }
 
 #rfBarGrid {
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
   height: 20%;
 }
 
 .rfBarForum {
-  grid-template-columns: 1fr !important;
+  -ms-grid-columns: 1fr !important;
+      grid-template-columns: 1fr !important;
 }
 #resourcesButton {
   border-bottom: 3px solid var(--main-purple);
@@ -143,10 +158,12 @@ body {
 }
 
 #bottomBarGrid {
+  display: -ms-grid;
   display: grid;
   width: 95%;
   margin: auto;
-  grid-template-columns: 1fr 1fr 1fr;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
   height: 100%;
 }
 
@@ -167,6 +184,8 @@ body {
 #searchButton i,
 #alertsButton i {
   font-size: 1.45em;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
   transition: 0.3s;
 }
 
@@ -195,9 +214,12 @@ body {
   background-color: white;
   width: 100%;
   border-bottom: 1px solid #D0D0D0;
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: 1fr 2fr 9%;
-  grid-template-rows: 20% 20% 20% 40%;
+  -ms-grid-columns: 1fr 2fr 9%;
+      grid-template-columns: 1fr 2fr 9%;
+  -ms-grid-rows: 20% 20% 20% 40%;
+      grid-template-rows: 20% 20% 20% 40%;
   grid-column-gap: 5px;
 }
 
@@ -205,7 +227,9 @@ body {
   margin: auto;
   width: 85%;
   height: 85%;
-  grid-column-start: 1;
+  -ms-grid-column: 1;
+      grid-column-start: 1;
+  -ms-grid-row-span: 2;
   grid-row-end: span 2;
   background-position: center;
   background-size: cover;
@@ -225,7 +249,9 @@ body {
   /* display: grid; */
   /* grid-template-columns: 1fr 3fr; */
   /* grid-row-gap: 32px; */
-  grid-row-start: 1;
+  -ms-grid-row: 1;
+      grid-row-start: 1;
+  -ms-grid-column-span: 2;
   grid-column-end: span 2;
 }
 
@@ -234,12 +260,15 @@ body {
 }
 
 .itemTitle {
-  grid-column-start: 2;
+  -ms-grid-column: 2;
+      grid-column-start: 2;
 }
 
 .itemMessage {
-  grid-row-start: 1;
-  grid-column-start: 3;
+  -ms-grid-row: 1;
+      grid-row-start: 1;
+  -ms-grid-column: 3;
+      grid-column-start: 3;
   margin: auto;
   color: var(--main-purple);
   font-size: 11px;
@@ -277,7 +306,9 @@ body {
 .feedDescription {
   /* background-color: red; */
   /* display: none; */
-  grid-column-start: 1;
+  -ms-grid-column: 1;
+      grid-column-start: 1;
+  -ms-grid-column-span: 3;
   grid-column-end: span 3;
   /* text-align: center; */
   margin: auto;
@@ -296,6 +327,9 @@ body {
 }
 
 .shortDesc {
+  background-image: -webkit-gradient(linear,left top, left bottom,color-stop(40%, #303030),to(rgba(0,0,0,0)));
+  background-image: -webkit-linear-gradient(top,#303030 40%,rgba(0,0,0,0));
+  background-image: -o-linear-gradient(top,#303030 40%,rgba(0,0,0,0));
   background-image: linear-gradient(180deg,#303030 40%,rgba(0,0,0,0));
 -webkit-background-clip: text;
 -webkit-text-fill-color: transparent;
@@ -319,6 +353,7 @@ body {
 }
 
 #forumGrid {
+  display: -ms-grid;
   display: grid;
   height: 100%;
   grid-gap: 1px;
@@ -328,8 +363,10 @@ body {
   width: 100%;
   height: 100%;
   background-color: white;
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: 0.2fr 1fr 4fr;
+  -ms-grid-columns: 0.2fr 1fr 4fr;
+      grid-template-columns: 0.2fr 1fr 4fr;
   grid-gap: 10px;
   border-bottom: 1px solid #D0D0D0;
 }
@@ -399,8 +436,10 @@ body {
 }
 
 .subForumGrid {
+  display: -ms-grid;
   display: grid;
-  grid-template-rows: 1fr;
+  -ms-grid-rows: 1fr;
+      grid-template-rows: 1fr;
   grid-gap: 10px;
 }
 
@@ -418,8 +457,10 @@ body {
 }
 
 .subPostInfo {
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: 9fr 1fr;
+  -ms-grid-columns: 9fr 1fr;
+      grid-template-columns: 9fr 1fr;
   font-family: 'Lato';
   color: #707070;
   font-size: 0.7em;
@@ -448,7 +489,8 @@ body {
 #postFeedContainer {
   height: 100%;
   display: none;
-  grid-template-rows: 0.5fr 5fr;
+  -ms-grid-rows: 0.5fr 5fr;
+      grid-template-rows: 0.5fr 5fr;
 }
 
 .topBar {
@@ -458,21 +500,30 @@ body {
 }
 
 .topBarGrid {
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: 15% 40% 27% 9% 9%;
+  -ms-grid-columns: 15% 40% 27% 9% 9%;
+      grid-template-columns: 15% 40% 27% 9% 9%;
   border-bottom: 1px solid #D0D0D0;
 }
 
 .userIcon,
 .closeButton {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   /* vertically centering elements */
 }
 
 .closeButton {
-  grid-column-start: 5;
+  -ms-grid-column: 5;
+      grid-column-start: 5;
 }
 
 .closeButton i {
@@ -517,8 +568,10 @@ body {
 }
 
 .formGrid {
+  display: -ms-grid;
   display: grid;
-  grid-template-rows: 1fr;
+  -ms-grid-rows: 1fr;
+      grid-template-rows: 1fr;
   grid-gap: 2em;
 }
 
@@ -538,8 +591,10 @@ label h1 {
 }
 
 #radioGridContainer {
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
   grid-gap: 10px;
 }
 
@@ -651,5 +706,6 @@ input[type="submit"] {
 #postForumContainer {
   height: 100%;
   display: none;
-  grid-template-rows: 0.5fr 5fr;
+  -ms-grid-rows: 0.5fr 5fr;
+      grid-template-rows: 0.5fr 5fr;
 }
