--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,10 +9,8 @@ body {
 #appContainer {
   width: 100%;
   height: 100vh;
-  display: -ms-grid;
   display: grid;
-  -ms-grid-rows: 0.5fr 5fr 0.5fr;
-      grid-template-rows: 0.5fr 5fr 0.5fr;
+  grid-template-rows: 0.5fr 5fr 0.5fr;
   /* background-color: purple; */
   margin: 0;
   padding: 0;
@@ -34,12 +32,10 @@ body {
 }
 
 #topBarGrid {
-  display: -ms-grid;
   display: grid;
   width: 93%;
   margin: auto;
-  -ms-grid-columns: 15% 40% 27% 9% 9%;
-      grid-template-columns: 15% 40% 27% 9% 9%;
+  grid-template-columns: 15% 40% 27% 9% 9%;
 }
 
 #userIcon,
@@ -51,16 +47,11 @@ body {
 #alertsButton,
 .subForumIcon,
 .formItemImageContainer,
-.itemMessage {
-  display: -webkit-box;
-  display: -ms-flexbox;
+.itemMessage,
+.postContainer {
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   /* vertically centering elements */
 }
 
@@ -95,14 +86,12 @@ body {
 
 #filterButton {
   /* background-color: blue; */
-  -ms-grid-column: 4;
-      grid-column-start: 4;
+  grid-column-start: 4;
 }
 
 #postButton {
   /* background-color: yellow; */
-  -ms-grid-column: 5;
-      grid-column-start: 5;
+  grid-column-start: 5;
 }
 
 #filterButton i,
@@ -119,16 +108,13 @@ body {
 }
 
 #rfBarGrid {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr 1fr;
-      grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
   height: 20%;
 }
 
 .rfBarForum {
-  -ms-grid-columns: 1fr !important;
-      grid-template-columns: 1fr !important;
+  grid-template-columns: 1fr !important;
 }
 #resourcesButton {
   border-bottom: 3px solid var(--main-purple);
@@ -158,13 +144,43 @@ body {
 }
 
 #bottomBarGrid {
-  display: -ms-grid;
   display: grid;
   width: 95%;
   margin: auto;
-  -ms-grid-columns: 1fr 1fr 1fr;
-      grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   height: 100%;
+}
+
+#replyButtonContainer {
+  display: none;
+}
+.replyButtonContainerShow {
+  display: grid !important;
+  height: 100%;
+  width: 100%;
+  grid-template-columns: 90% 10%;
+}
+
+.addCommentContainer {
+  border: 1px solid #A0A0A0;
+  height: 60%;
+  width: 90%;
+  margin: auto;
+  border-radius: 3px;
+}
+
+.addCommentContainer h1 {
+  margin-left: 5px;
+  font-family: 'Lato';
+  font-size: 0.9em;
+  font-weight: bolder;
+  color: #909090;
+  letter-spacing: 1.2px;
+}
+.postContainer {
+  height: 60%;
+  margin: auto;
+  color: #808080
 }
 
 #homeButton {
@@ -184,8 +200,6 @@ body {
 #searchButton i,
 #alertsButton i {
   font-size: 1.45em;
-  -webkit-transition: 0.3s;
-  -o-transition: 0.3s;
   transition: 0.3s;
 }
 
@@ -197,7 +211,7 @@ body {
 
 #mainContent {
   overflow-y: scroll;
-  background-color: #E0E0E0;
+  background-color: #D0D0D0;
 }
 
 #feedContainer,
@@ -214,22 +228,17 @@ body {
   background-color: white;
   width: 100%;
   border-bottom: 1px solid #D0D0D0;
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr 2fr 9%;
-      grid-template-columns: 1fr 2fr 9%;
-  -ms-grid-rows: 20% 20% 20% 40%;
-      grid-template-rows: 20% 20% 20% 40%;
-  grid-column-gap: 5px;
+  grid-template-columns: 1fr 2fr 9%;
+  grid-template-rows: 1fr 1fr 2fr;
+  /* margin-top: 10px; */
 }
 
 .itemIcon {
   margin: auto;
-  width: 85%;
+  width: 100%;
   height: 85%;
-  -ms-grid-column: 1;
-      grid-column-start: 1;
-  -ms-grid-row-span: 2;
+  grid-column-start: 1;
   grid-row-end: span 2;
   background-position: center;
   background-size: cover;
@@ -249,9 +258,7 @@ body {
   /* display: grid; */
   /* grid-template-columns: 1fr 3fr; */
   /* grid-row-gap: 32px; */
-  -ms-grid-row: 1;
-      grid-row-start: 1;
-  -ms-grid-column-span: 2;
+  grid-row-start: 1;
   grid-column-end: span 2;
 }
 
@@ -260,15 +267,12 @@ body {
 }
 
 .itemTitle {
-  -ms-grid-column: 2;
-      grid-column-start: 2;
+  grid-column-start: 2;
 }
 
 .itemMessage {
-  -ms-grid-row: 1;
-      grid-row-start: 1;
-  -ms-grid-column: 3;
-      grid-column-start: 3;
+  grid-row-start: 1;
+  grid-column-start: 3;
   margin: auto;
   color: var(--main-purple);
   font-size: 11px;
@@ -306,9 +310,7 @@ body {
 .feedDescription {
   /* background-color: red; */
   /* display: none; */
-  -ms-grid-column: 1;
-      grid-column-start: 1;
-  -ms-grid-column-span: 3;
+  grid-column-start: 1;
   grid-column-end: span 3;
   /* text-align: center; */
   margin: auto;
@@ -327,33 +329,67 @@ body {
 }
 
 .shortDesc {
-  background-image: -webkit-gradient(linear,left top, left bottom,color-stop(40%, #303030),to(rgba(0,0,0,0)));
-  background-image: -webkit-linear-gradient(top,#303030 40%,rgba(0,0,0,0));
-  background-image: -o-linear-gradient(top,#303030 40%,rgba(0,0,0,0));
   background-image: linear-gradient(180deg,#303030 40%,rgba(0,0,0,0));
--webkit-background-clip: text;
--webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  display: none;
+  -webkit-text-fill-color: transparent;
 }
 
 .shortReplies {
   display: none;
 }
 
+.longReplies {
+  display: grid;
+  grid-gap: 10px;
+}
+
 .longDesc {
   margin-bottom: 20px;
 }
 
+#individualFeedItem {
+}
+
+
 .repliesText {
-  background-color: white;
+  background-color: #D0D0D0;
   padding: 10px;
   font-family: 'Lato';
   font-weight: bolder;
   color: #808080;
+  border-bottom: 1px solid #D0D0D0;
   letter-spacing: 1.4px;
 }
 
+.feedItemRepliesContainer {
+  /* background-color: white; */
+}
+
+.feedItemReplies {
+  /* width: 95%; */
+  margin: auto;
+  background-color: white;
+}
+
+.feedItemReplies h5 {
+  width: 95%;
+  margin-left: 10px;
+    font-family: 'Lato';
+  color: #707070;
+  font-size: 0.7em;
+  letter-spacing: 1.3px;
+}
+
+.feedItemReplies h4 {
+  font-family: 'Roboto';
+  font-size: 0.8em;
+  font-weight: 500;
+  width: 95%;
+  margin-left: 10px
+}
+
 #forumGrid {
-  display: -ms-grid;
   display: grid;
   height: 100%;
   grid-gap: 1px;
@@ -363,10 +399,8 @@ body {
   width: 100%;
   height: 100%;
   background-color: white;
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 0.2fr 1fr 4fr;
-      grid-template-columns: 0.2fr 1fr 4fr;
+  grid-template-columns: 0.2fr 1fr 4fr;
   grid-gap: 10px;
   border-bottom: 1px solid #D0D0D0;
 }
@@ -436,10 +470,8 @@ body {
 }
 
 .subForumGrid {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-rows: 1fr;
-      grid-template-rows: 1fr;
+  grid-template-rows: 1fr;
   grid-gap: 10px;
 }
 
@@ -457,10 +489,8 @@ body {
 }
 
 .subPostInfo {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 9fr 1fr;
-      grid-template-columns: 9fr 1fr;
+  grid-template-columns: 9fr 1fr;
   font-family: 'Lato';
   color: #707070;
   font-size: 0.7em;
@@ -489,8 +519,7 @@ body {
 #postFeedContainer {
   height: 100%;
   display: none;
-  -ms-grid-rows: 0.5fr 5fr;
-      grid-template-rows: 0.5fr 5fr;
+  grid-template-rows: 0.5fr 5fr;
 }
 
 .topBar {
@@ -500,30 +529,21 @@ body {
 }
 
 .topBarGrid {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 15% 40% 27% 9% 9%;
-      grid-template-columns: 15% 40% 27% 9% 9%;
+  grid-template-columns: 15% 40% 27% 9% 9%;
   border-bottom: 1px solid #D0D0D0;
 }
 
 .userIcon,
 .closeButton {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   /* vertically centering elements */
 }
 
 .closeButton {
-  -ms-grid-column: 5;
-      grid-column-start: 5;
+  grid-column-start: 5;
 }
 
 .closeButton i {
@@ -568,10 +588,8 @@ body {
 }
 
 .formGrid {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-rows: 1fr;
-      grid-template-rows: 1fr;
+  grid-template-rows: 1fr;
   grid-gap: 2em;
 }
 
@@ -591,10 +609,8 @@ label h1 {
 }
 
 #radioGridContainer {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr 1fr;
-      grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
   grid-gap: 10px;
 }
 
@@ -706,6 +722,5 @@ input[type="submit"] {
 #postForumContainer {
   height: 100%;
   display: none;
-  -ms-grid-rows: 0.5fr 5fr;
-      grid-template-rows: 0.5fr 5fr;
+  grid-template-rows: 0.5fr 5fr;
 }
