--- a/public/css/search.css
+++ b/public/css/search.css
@@ -2,7 +2,7 @@ body {
   width: 100%;
   height: 100vh;
   display: grid;
-  grid-template-rows: 0.5fr 2.5em 5fr 0.5fr;
+  grid-template-rows: 0.5fr 0.5fr 6fr 0.6fr;
   /* background-color: purple; */
   margin: 0;
   padding: 0;
@@ -108,29 +108,6 @@ body {
 #filterButton i,
 #postButton i {
   font-size: 1.5em;
-}
-
-#bottomBar {
-  width: 100%;
-  border-top: 1px solid #A0A0A0;
-  height: 3em;
-}
-
-#bottomBarGrid {
-  display: grid;
-  width: 95%;
-  margin: auto;
-  grid-template-columns: 1fr 1fr 1fr;
-  height: 100%;
-}
-
-#homeButton {
-}
-
-#searchButton {
-}
-
-#alertsButton {
 }
 
 #searchButton i {
