--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -12,7 +12,7 @@ body {
   display: -ms-grid;
   display: grid;
   -ms-grid-rows: 0.5fr 5fr 0.5fr;
-      grid-template-rows: 0.5fr 5fr 0.5fr;
+      grid-template-rows: 0.5fr 6fr 0.6fr;
   /* background-color: purple; */
   margin: 0;
   padding: 0;
@@ -162,7 +162,9 @@ body {
   /* background-color: orange; */
   width: 100%;
   height: 100%;
-  border-top: 1px solid #C0C0C0;
+  /* border-top: 1px solid #C0C0C0; */
+  box-shadow: 0 -1px 3px rgb(231, 231, 231);
+  z-index: 100;
   /* position: absolute;
   bottom: 0; */
 }
