--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -96,8 +96,8 @@ body {
 
 #appName h1 {
   /* text-align: center; */
-  font-family: 'Lato';
-  font-weight: lighter;
+  font-family: 'Pacifico';
+  font-weight: 400;
   font-size: 1.7em;
   color: #707070;
   margin-left: 10px
