--- a/views/inbox.hbs
+++ b/views/inbox.hbs
@@ -5,7 +5,7 @@
         <div id="userIconCircle"></div>
       </div>
       <div id="appName">
-        <h1>App Name</h1>
+        <h1>Haʻāwi</h1>
       </div>
       <div id="newMsgButton">
         <i class="fas fa-plus"></i>
