--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="/css/styles.css">
 
   {{!-- inbox styles --}}
-  <link rel="stylesheet" href="/css/inbox.css">
+  <link rel="stylesheet" href="./css/inbox.css">
 
   {{!-- search styles --}}
   <link rel="stylesheet" href="/css/search.css">
