--- a/public/css/search.css
+++ b/public/css/search.css
@@ -91,8 +91,8 @@ body {
 
 #appName h1 {
   text-align: left;
-  font-family: 'Lato';
-  font-weight: lighter;
+  font-family: 'Pacifico';
+  font-weight: 400;
   font-size: 2em;
 }
 
