--- a/views/home.hbs
+++ b/views/home.hbs
@@ -8,7 +8,7 @@
                 <i id="backArrow" class="fas fa-arrow-left"></i>
             </div>
             <div id="appName">
-                <h1>Ha’āwi</h1>
+                <h1>Haʻāwi</h1>
             </div>
             <div id="postButton">
                 <i class="fas fa-plus"></i>
