--- a/views/inbox.hbs
+++ b/views/inbox.hbs
@@ -2,10 +2,12 @@
   <div id="topBar">
     <div id="topBarGrid">
       <div id="userIcon">
-        <div id="userIconCircle"></div>
+        <div id="userIconCircle">
+          <i class="fas fa-user-graduate"></i>
+        </div>
       </div>
       <div id="appName">
-        <h1>App Name</h1>
+        <h1>Ha’āwi</h1>
       </div>
       <div id="newMsgButton">
         <i class="fas fa-plus"></i>
