--- a/views/search.hbs
+++ b/views/search.hbs
@@ -1,10 +1,12 @@
 <div id="topBar">
   <div id="topBarGrid">
     <div id="userIcon">
-      <div id="userIconCircle"></div>
+      <div id="userIconCircle">
+        <i class="fas fa-user-graduate"></i>
+      </div>
     </div>
     <div id="appName">
-      <h1>App Name</h1>
+      <h1>Ha’āwi</h1>
     </div>
   </div>
 </div>
