--- a/public/css/inbox.css
+++ b/public/css/inbox.css
@@ -56,6 +56,10 @@ body {
     /* background-color: red; */
   }
 
+  #postButton {
+    padding-right: 10px;
+  }
+
   #userIconCircle {
     width: 45px;
     height: 45px;
@@ -64,7 +68,7 @@ body {
     margin: auto;
   }
 
-  #appName {
+  /* #appName {
     box-sizing: border-box;
     padding-left: 1em;
   }
@@ -74,7 +78,7 @@ body {
     font-family: 'Lato';
     font-weight: lighter;
     font-size: 2em;
-  }
+  } */
 
   #newMsgButton {
     margin: auto;
