--- a/public/css/search.css
+++ b/public/css/search.css
@@ -84,7 +84,7 @@ body {
   margin: auto;
 }
 
-#appName {
+/* #appName {
   box-sizing: border-box;
   padding-left: 1em;
 }
@@ -94,7 +94,7 @@ body {
   font-family: 'Lato';
   font-weight: lighter;
   font-size: 2em;
-}
+} */
 
 #filterButton {
   /* background-color: blue; */
